# indeep

./: .gitignore  LICENSE  README.md  go.mod  go.sum  main.go
.github/: README.md
api/: addr.go  app.go  data.go  endpoint.go  gateway.go  group.go  instance.go  leader.go  member.go  meta.go  peer.go  placer.go  sign.go  tenant.go
book/object-storage-for-fun/: 00-index.md  01-hardware.md  02-sync_io.md
cmd/indeep-gateway/: main.go
cmd/indeep-metaserver/: main.go
cmd/indeep-placer/: main.go
indeep-dataserver/: Cargo.toml
indeep-dataserver/src/: main.rs
indeep-dataserver/src/config/: config.rs
indeep-dataserver/src/storage/: storage.rs
internal/apps/: app.go
internal/awsutl/: aws.go
internal/clients/: data.go  meta.go  placer.go
internal/databases/: db.go  snap.go  stable.go
internal/endpoints/: http.go
internal/fsmdb/: db.go  snap.go  state.go
internal/groups/: idgen.go  layer.go  layer_test.go  multipeer.go  trans.go  trans_test.go
internal/httputl/: http.go
internal/hyped/: codec.go  context.go  handler.go  rpc.go
internal/jsonhttp/: json.go
internal/jsonutl/: json.go
internal/logs/: log.go
internal/peers/: peer.go
internal/servers/: config.go  gateway.go  meta.go  metaserver.go  placer.go
internal/sigv4/: sigv4.go
internal/snapmetadb/: db.go  mapper.go  snap.go
internal/tenants/: tenant.go
internal/typedh/: codec.go  context.go  error.go  handler.go
internal/utils/: util.go
pkg/dataservers/: dataserver.go
pkg/metaservers/: metaserver.go
pkg/placers/: placer.go
pkg/types/: object.go
(+29 files in other folders)
