[package]
name = "indeep-dataserver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-uring = { version = "0.5.0" }
axum = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
once_cell = "1.21.3"

